--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </div>
 
           <div class="text-one">
-            <p style="font-size: 1.4rem; text-align: center" id="text">
-              ¿Te gustaria ser mi San Valentin? ❤️🫠
+            <p style="text-align: center" id="text">
+              ¿Me concederías el honor de invitarte este San Valentín? 🌹
             </p>
           </div>
         </div>
